--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=Devmedia;user=root;password=Daniele970907@;CharSet=utf8;",
+    "ApplicationBdContextConnection": "Server=(localdb)\\mssqllocaldb;Database=telas;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
