--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=Devmedia;user=root;password=Daniele970907@;CharSet=utf8;",
+    "DefaultConnection": "Server=systemwine.mysql.database.azure.com; Port=3306; Database=devmedia; Uid=privado@systemwine; Pwd=Daniele0907@; SslMode=Preferred;",
     "ApplicationBdContextConnection": "Server=(localdb)\\mssqllocaldb;Database=telas;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
