--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=systemwine.mysql.database.azure.com; Port=3306; Database=devmedia; Uid=privado; Pwd=Daniele0907@; SslMode=Preferred;",
+    "DefaultConnection": "Server=systemwine.mysql.database.azure.com; Port=3306; Database=devmedia; Uid=\"privado@systemwine\"; Pwd=\"Daniele0907@\"; SslMode=Preferred;",
     "ApplicationBdContextConnection": "Server=(localdb)\\mssqllocaldb;Database=telas;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
