--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Database=devmedia; Data Source=systemwine.mysql.database.azure.com; User Id=privado@systemwine; Password=\"Daniele0907@\"",
+    "DefaultConnection": "Database=devmedia; Data Source=systemwine.mysql.database.azure.com; User Id=privado@systemwine; Password=Daniele0907",
     "ApplicationBdContextConnection": "Server=(localdb)\\mssqllocaldb;Database=telas;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
